--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -32,37 +32,6 @@
 
 }
 
-/* vision and mission css */
-.vision-container {
-    padding:2.5rem 0 2.5rem 0;
-  
-  }
-
-  hr{
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #d9d9d9;
-    margin: 1em 0;
-    padding: 0;
-  }
-  .vision{
-    padding-bottom: 20px;
-  }
-
-  .vm-heading{
-    padding-left:2rem;
-  }
-  
-  
-  .vision-container div  p {
-    line-height: 2.4rem;
-    padding-left: 2rem;
-    font-weight:500;
-    font-size:large;
-  
-  }
-  
 
 @media only screen and (max-width: 1024px) {
 
